# invt-wasm

./: .gitignore  README.md
a0/: Cargo.toml  index.js  package-lock.json  package.json
a0/src/: lib.rs
cspr/: Cargo.toml  index.js  package-lock.json  package.json
cspr/src/: lib.rs
serde/: Cargo.toml  package.json
serde-a0/: Cargo.toml  package-lock.json  package.json
serde-a0/flipper/: Cargo.toml  lib.rs
serde-a0/front/: index.ts
serde-a0/src/: lib.rs
serde-a0/src/remote/: liq.rs  mod.rs  usage.rs
serde-a0/traceable_result/: lib.rs
serde-cspr/: package-lock.json  package.json  tsconfig.json
serde-cspr/decimal/: Cargo.toml
serde-cspr/decimal/decimal_core/: Cargo.toml
serde-cspr/front/: index.ts
serde-cspr/src/: lib.rs
serde/front/: index.ts
serde/src/: lib.rs
