[package]
name = "invt"
version = "0.1.0"
authors = ["The wasm-bindgen Developers"]
edition = "2018"
rust-version = "1.57"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.89"
uint = { version = "0.9", default-features = false }
borsh = { version = "0.9.3", default-features = false }


decimal = { path= "./decimal" }
traceable_result = { path = "./traceable_result" }


# Uncommenting the following lines will cause `wasm-pack build` to fail.

# # ink
# ink = { version = "4.2.0", default-features = false }
# scale = { package = "parity-scale-codec", version = "3", default-features = false, features = [
#   "derive",
# ] }
# scale-info = { version = "2.6", default-features = false, features = [
#   "derive",
# ], optional = true }


# [features]
# default = ["std"]
# std = ["ink/std",] # "scale/std", "scale-info/std"
# ink-as-dependency = []
# e2e-tests = []