[package]
name = "invt"
version = "0.1.0"
authors = ["The wasm-bindgen Developers"]
edition = "2018"
rust-version = "1.57"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.89"
uint = { version = "0.9", default-features = false }
borsh = { version = "0.9.3", default-features = false }
odra = { git = "https://github.com/odradev/odra.git", branch = "release/0.7.1", default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.4"
tsify = "0.4.5"

decimal = { path= "./decimal" }
traceable_result = { path = "./traceable_result" }


# # Decimal
# integer-sqrt = "0.1.5"
# num-traits = { version = "0.2.14", default-features = false }

# # Decimal Core
# proc-macro2 = { version = "1.0.67", default-features = false }
# quote = { version = "1.0.33", default-features = false }
# # regex = { version = "1", default-features = false }
# syn = { version = "2.0.38", features = ["full"] }


[features]
default = ["mock-vm"]
mock-vm = ["odra/mock-vm",]
casper = ["odra/casper", ]
time-consuming = []